# package-trial

./: .agent.md  .gitignore  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  README_TESTING.md  RELEASE_NOTES.md  SECURITY.md  ci_workflow_update_pr.md  issue_description.md  merge_pr.py  pull_request_description.md  pyproject.toml  python_version_update_issue.md  python_version_update_pr.md
.gemini/: styleguide.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  pr-checks.yml  quality.yml  release.yml  security.yml  status-checks.yml
docs/: status_checks.md
src/package_trial_zenjiro/: main.py
tests/: __init__.py  conftest.py  test_advanced.py  test_documentation.py  test_edge_cases.py  test_integration.py  test_main.py  test_performance.py
